# StudyRoom

./: .env.example  .gitignore  CLAUDE.md  PROJECT_STATE.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml  test.html
backend/src/studyroom/dashboard/: __init__.py  bootstrap.py  entities.py  exc.py  manifest.yaml  models.py  router.py  service.py
backend/src/studyroom/focus/: __init__.py  bootstrap.py  entities.py  exc.py  manifest.yaml  models.py  router.py  service.py
backend/src/studyroom/rooms/: __init__.py  bootstrap.py  connection_manager.py  entities.py  exc.py  manifest.yaml  models.py  router.py  service.py
backend/src/studyroom/users/: __init__.py  bootstrap.py  entities.py  exc.py  manifest.yaml  models.py  router.py  service.py
docs/: PROJECT_STATE.md  README.md  api-protocol.md  architecture.md  changelog.md  design-spec.md  development-guide.md  requirements.md
frontend/: .dockerignore  Dockerfile  components.json  eslint.config.js  index.html  nginx.conf  opencode.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
frontend/src/: App.tsx  App.vue  index.css  main.js  main.tsx
frontend/src/api/: auth.ts  dashboard.ts  focus.ts  follow.ts  leaderboard.ts  rooms.ts  settings.ts
frontend/src/assets/: index.css
frontend/src/components/: AuthGuard.tsx  Room.vue
frontend/src/composables/: useToast.js
frontend/src/hooks/: useCurrentUser.ts  (+6 more)
mysql/: my.cnf
mysql/initdb/: 01-schema.sql
scripts/: migrate_sqlite_to_mysql.py
(+43 files in other folders)
